--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     def version_retrofit_coroutines_adapter = "0.9.2"
     def glide_version = "4.8.0"
     def room_version = "2.2.5"
+    def version_recyclerview = "1.3.1"
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
@@ -68,6 +69,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "androidx.room:room-ktx:$room_version"
+
+    implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
 
