--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,6 @@ dependencies {
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
-    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.1.0'
 
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
@@ -71,6 +70,8 @@ dependencies {
     implementation "androidx.room:room-ktx:$room_version"
 
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
+
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
 
