--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,11 @@ buildscript {
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0'
 
     }
+
+    repositories {
+        mavenCentral()
+        google()
+    }
 }
 
 plugins {
