--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,10 +16,13 @@ android {
         targetSdk 33
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -46,32 +49,37 @@ dependencies {
     def glide_version = "4.8.0"
     def room_version = "2.2.5"
     def version_recyclerview = "1.3.1"
+    def round_image_version = "2.3.0"
+
+    def hamcrest_version = "1.3.0"
+    def androidX_test_core_version = "1.2.0"
+    def robolectric_version = "4.7.3"
+    def androidX_test_ext_kotlin_runner_version = "1.1.1"
+    def junit_version = "4.13.2"
+    def arch_testing_version = "2.0.0"
+
+
 
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-
     implementation "com.squareup.moshi:moshi:$moshi_version"
     implementation "com.squareup.moshi:moshi-kotlin:$moshi_version"
-
     implementation "com.squareup.retrofit2:converter-moshi:$retrofit_version"
-
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:$version_retrofit_coroutines_adapter"
 
     implementation "com.github.bumptech.glide:glide:$glide_version"
 
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
-
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-
     implementation "androidx.room:room-ktx:$room_version"
 
     implementation "androidx.recyclerview:recyclerview:$version_recyclerview"
 
-    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation "com.makeramen:roundedimageview:$round_image_version"
 
     implementation "android.arch.work:work-runtime-ktx:1.0.1"
 
@@ -82,7 +90,17 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-    testImplementation 'junit:junit:4.13.2'
+    // local unit test
+    testImplementation "junit:junit:$junit_version"
+    testImplementation "androidx.arch.core:core-testing:$arch_testing_version"
+//    testImplementation "org.hamcrest:hamcrest-all:$hamcrest_version"
+    testImplementation "androidx.test:core-ktx:$androidX_test_core_version"
+    testImplementation "org.robolectric:robolectric:$robolectric_version"
+    testImplementation "androidx.test.ext:junit-ktx:$androidX_test_ext_kotlin_runner_version"
+
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 }
