--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.hilt_version = '2.46'
     dependencies {
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.6.0'
-
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 
     repositories {
@@ -15,6 +16,7 @@ plugins {
     id 'com.android.application' version '8.0.1' apply false
     id 'com.android.library' version '8.0.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20' apply false
+    id 'com.google.dagger.hilt.android' version '2.42' apply false
 }
 
 allprojects {
