--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,13 +44,16 @@ android {
 
 dependencies {
     def nav_version = "2.6.0"
+
     def retrofit_version = "2.9.0"
     def moshi_version = '1.13.0'
     def version_retrofit_coroutines_adapter = "0.9.2"
-    def glide_version = "4.8.0"
+
     def room_version = "2.2.5"
+
     def version_recyclerview = "1.3.1"
     def round_image_version = "2.3.0"
+    def glide_version = "4.8.0"
 
     def hamcrest_version = "1.3.0"
     def androidX_test_core_version = "1.2.0"
@@ -58,6 +61,8 @@ dependencies {
     def androidX_test_ext_kotlin_runner_version = "1.1.1"
     def junit_version = "4.13.2"
     def arch_testing_version = "2.0.0"
+    def fragment_version = "1.1.0-alpha07"
+    def coroutines_version = "1.3.7"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
@@ -94,6 +99,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    // instrumented test
+    implementation "androidx.fragment:fragment-testing:$fragment_version"
+    implementation "androidx.test:core:$androidX_test_core_version"
+
     // local unit test
     testImplementation "junit:junit:$junit_version"
     testImplementation "androidx.arch.core:core-testing:$arch_testing_version"
@@ -101,6 +110,7 @@ dependencies {
     testImplementation "androidx.test:core-ktx:$androidX_test_core_version"
     testImplementation "org.robolectric:robolectric:$robolectric_version"
     testImplementation "androidx.test.ext:junit-ktx:$androidX_test_ext_kotlin_runner_version"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines_version"
 
     testImplementation 'org.mockito:mockito-core:3.12.4'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
