--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,6 +5,7 @@ plugins {
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-parcelize'
     id 'dagger.hilt.android.plugin'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -43,6 +44,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     def nav_version = "2.6.0"
 
     def retrofit_version = "2.9.0"
@@ -61,8 +63,14 @@ dependencies {
     def androidX_test_ext_kotlin_runner_version = "1.1.1"
     def junit_version = "4.13.2"
     def arch_testing_version = "2.0.0"
-    def fragment_version = "1.1.0-alpha07"
+    def fragment_version = "1.6.1"
     def coroutines_version = "1.3.7"
+
+    def paging_version = "3.1.0"
+
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.2.1'
+
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
@@ -100,7 +108,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // instrumented test
-    implementation "androidx.fragment:fragment-testing:$fragment_version"
+    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"
     implementation "androidx.test:core:$androidX_test_core_version"
 
     // local unit test
